--- a/Logistic_Regression_with_Irish_Dataset.ipynb
+++ b/Logistic_Regression_with_Irish_Dataset.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Logistic_Regression_with_Irish_Dataset.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMdewitYgUqhIdDUuXIrz4L",
+      "authorship_tag": "ABX9TyMeJ8iFFAKzmC1crOXpitSv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1093,6 +1093,52 @@
             "tags": []
           },
           "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gkQYivNjJ_1Z"
+      },
+      "source": [
+        "predictedAnswer = model.predict(x_test)"
+      ],
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yXfABYolKL9D",
+        "outputId": "843d5de1-e8bd-4f00-e389-ba4537be257f"
+      },
+      "source": [
+        "predictedAnswer\n"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['Iris-versicolor', 'Iris-virginica', 'Iris-setosa',\n",
+              "       'Iris-versicolor', 'Iris-versicolor', 'Iris-virginica',\n",
+              "       'Iris-setosa', 'Iris-virginica', 'Iris-setosa', 'Iris-virginica',\n",
+              "       'Iris-setosa', 'Iris-setosa', 'Iris-virginica', 'Iris-versicolor',\n",
+              "       'Iris-virginica', 'Iris-setosa', 'Iris-virginica',\n",
+              "       'Iris-virginica', 'Iris-setosa', 'Iris-virginica',\n",
+              "       'Iris-virginica', 'Iris-virginica', 'Iris-versicolor'],\n",
+              "      dtype=object)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
         }
       ]
     }
