--- a/Book/01.Introduction to Machine Learning with Python/Chapter 01.ipynb
+++ b/Book/01.Introduction to Machine Learning with Python/Chapter 01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "96e3fdbd",
+   "id": "d4e62964",
    "metadata": {},
    "source": [
     "# NumPy"
@@ -10,20 +10,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "970fe84d",
+   "execution_count": 3,
+   "id": "85afd8c1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x:\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "x = np.array"
+    "x = np.array([[1,2,3],[4,5,6]])\n",
+    "\n",
+    "print(\"x:\\n{}\".format(x))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a468777c",
+   "id": "1c7df422",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -31,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a86261c",
+   "id": "b3ea21fa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -39,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4449964",
+   "id": "1eb2a9f8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -47,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "383722ea",
+   "id": "5575a17f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -55,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f2b53c0",
+   "id": "4ae27aab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -63,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63aeaa19",
+   "id": "f269d857",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -71,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81f315d4",
+   "id": "f4a41750",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -79,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2feb63e5",
+   "id": "9d234df8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -87,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25c54fa3",
+   "id": "46a256ae",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -95,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53c14cbe",
+   "id": "c1875ace",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -103,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94083908",
+   "id": "8af0449f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -111,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82d8ce91",
+   "id": "f9eff018",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -119,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "290225bb",
+   "id": "5b975b79",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -127,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd620343",
+   "id": "cf619cd8",
    "metadata": {},
    "outputs": [],
    "source": []
