--- a/Book/01.Introduction to Machine Learning with Python/Chapter 01.ipynb
+++ b/Book/01.Introduction to Machine Learning with Python/Chapter 01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d4e62964",
+   "id": "9c7d8158",
    "metadata": {},
    "source": [
     "# NumPy"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "85afd8c1",
+   "id": "b915c7ca",
    "metadata": {},
    "outputs": [
     {
@@ -33,9 +33,137 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ffd0a538",
+   "metadata": {},
+   "source": [
+    "# SciPy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6b2736d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting scipyNote: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "  Downloading scipy-1.10.0-cp311-cp311-win_amd64.whl (42.2 MB)\n",
+      "     ---------------------------------------- 42.2/42.2 MB 5.5 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: numpy<1.27.0,>=1.19.5 in c:\\users\\sabbo\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from scipy) (1.24.1)\n",
+      "Installing collected packages: scipy\n",
+      "Successfully installed scipy-1.10.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip available: 22.3.1 -> 23.0\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install scipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "95dd0035",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import sparse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c4ebe875",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy array:\n",
+      "[[1. 0. 0. 0.]\n",
+      " [0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0.]\n",
+      " [0. 0. 0. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "# Create a 2D NumPy array with a diagonal of ones, and zeros everywhere else\n",
+    "eye = np.eye(4)\n",
+    "print(\"NumPy array:\\n{}\".format(eye))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "09227bbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "SciPy sparse CSR matrix:\n",
+      "  (0, 0)\t1.0\n",
+      "  (1, 1)\t1.0\n",
+      "  (2, 2)\t1.0\n",
+      "  (3, 3)\t1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "sparse_matrix = sparse.csr_matrix(eye)\n",
+    "\n",
+    "print(\"\\nSciPy sparse CSR matrix:\\n{}\".format(sparse_matrix))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "081c1b3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "COO representation:\n",
+      "  (0, 0)\t1.0\n",
+      "  (1, 1)\t1.0\n",
+      "  (2, 2)\t1.0\n",
+      "  (3, 3)\t1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = np.ones(4)\n",
+    "row_indices = np.arange(4)\n",
+    "col_indices = np.arange(4)\n",
+    "eye_coo = sparse.coo_matrix((data, (row_indices, col_indices)))\n",
+    "print(\"COO representation:\\n{}\".format(eye_coo))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c7df422",
+   "id": "c14aff43",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -43,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3ea21fa",
+   "id": "c54a6888",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -51,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eb2a9f8",
+   "id": "27e375bc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -59,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5575a17f",
+   "id": "f5d2c345",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -67,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ae27aab",
+   "id": "c5786cba",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -75,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f269d857",
+   "id": "4d16f200",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -83,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4a41750",
+   "id": "4595b55b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -91,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d234df8",
+   "id": "3573a52f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -99,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46a256ae",
+   "id": "ddc38d3f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -107,39 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1875ace",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8af0449f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f9eff018",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b975b79",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf619cd8",
+   "id": "27564663",
    "metadata": {},
    "outputs": [],
    "source": []
