--- a/Book/01.Introduction to Machine Learning with Python/Chapter 01.ipynb
+++ b/Book/01.Introduction to Machine Learning with Python/Chapter 01.ipynb
@@ -2,16 +2,32 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9c7d8158",
+   "id": "54559a1f",
    "metadata": {},
    "source": [
     "# NumPy"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a87ffefa",
+   "metadata": {},
+   "source": [
+    "NumPy is one of the fundamental packages for scientific computing in Python. It\n",
+    "contains functionality for multidimensional arrays, high-level mathematical functions \n",
+    "such as linear algebra operations and the Fourier transform, and pseudorandom\n",
+    "number generators.\n",
+    "\n",
+    "In scikit-learn, the NumPy array is the fundamental data structure. scikit-learn\n",
+    "takes in data in the form of NumPy arrays. Any data you’re using will have to be converted to a NumPy array. The core functionality of NumPy is the ndarray class, a\n",
+    "multidimensional (n-dimensional) array. All elements of the array must be of the\n",
+    "same type."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "b915c7ca",
+   "execution_count": 13,
+   "id": "189c45d6",
    "metadata": {},
    "outputs": [
     {
@@ -26,15 +42,13 @@
    ],
    "source": [
     "import numpy as np\n",
-    "\n",
     "x = np.array([[1,2,3],[4,5,6]])\n",
-    "\n",
     "print(\"x:\\n{}\".format(x))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ffd0a538",
+   "id": "75c8cecf",
    "metadata": {},
    "source": [
     "# SciPy"
@@ -43,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6b2736d3",
+   "id": "7fa04f9e",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "95dd0035",
+   "id": "aa4ed71d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c4ebe875",
+   "id": "2d3a1fc2",
    "metadata": {},
    "outputs": [
     {
@@ -102,8 +116,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "# Create a 2D NumPy array with a diagonal of ones, and zeros everywhere else\n",
     "eye = np.eye(4)\n",
     "print(\"NumPy array:\\n{}\".format(eye))"
@@ -112,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "09227bbd",
+   "id": "acc9dc68",
    "metadata": {},
    "outputs": [
     {
@@ -130,14 +142,13 @@
    ],
    "source": [
     "sparse_matrix = sparse.csr_matrix(eye)\n",
-    "\n",
     "print(\"\\nSciPy sparse CSR matrix:\\n{}\".format(sparse_matrix))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "081c1b3c",
+   "id": "5e00f97f",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c14aff43",
+   "id": "a0cb4d5c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -171,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c54a6888",
+   "id": "4379f0e6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -179,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27e375bc",
+   "id": "e80a7245",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -187,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5d2c345",
+   "id": "0f1d42fb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -195,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5786cba",
+   "id": "3ed0869c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -203,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d16f200",
+   "id": "8802a8ee",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -211,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4595b55b",
+   "id": "5b11c023",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -219,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3573a52f",
+   "id": "7605e93d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -227,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddc38d3f",
+   "id": "b2bd500f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -235,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27564663",
+   "id": "c0a3153f",
    "metadata": {},
    "outputs": [],
    "source": []
