scikit-learn description

--- a/Book/01.Introduction to Machine Learning with Python/Chapter 01.ipynb
+++ b/Book/01.Introduction to Machine Learning with Python/Chapter 01.ipynb
@@ -2,7 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "54559a1f",
+   "id": "51b98867",
+   "metadata": {},
+   "source": [
+    "# scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bcc53f0",
+   "metadata": {},
+   "source": [
+    "scikit-learn is an open source project. The scikit-learn project is constantly being developed and improved, and it\n",
+    "has a very active user community. It contains a number of state-of-the-art machine\n",
+    "learning algorithms, as well as comprehensive documentation about each algorithm.\n",
+    "scikit-learn is a very popular tool, and the most prominent Python library for\n",
+    "machine learning. It is widely used in industry and academia, and a wealth of tutorials and code snippets are available online.\n",
+    " scikit-learn works well with a number of\n",
+    "other scientific Python tools\n",
+    "\n",
+    "For more details read [user guide](https://scikit-learn.org/stable/user_guide.html) and API documentation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7883e8eb",
    "metadata": {},
    "source": [
     "# NumPy"
@@ -10,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a87ffefa",
+   "id": "66cab428",
    "metadata": {},
    "source": [
     "NumPy is one of the fundamental packages for scientific computing in Python. It\n",
@@ -27,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "189c45d6",
+   "id": "42701e8f",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75c8cecf",
+   "id": "10e17294",
    "metadata": {},
    "source": [
     "# SciPy"
@@ -57,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7fa04f9e",
+   "id": "0b85d23c",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "aa4ed71d",
+   "id": "2ef590be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "2d3a1fc2",
+   "id": "8455b8ed",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "acc9dc68",
+   "id": "848b4c04",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5e00f97f",
+   "id": "411823e7",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0cb4d5c",
+   "id": "3a103d40",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -182,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4379f0e6",
+   "id": "4258ab25",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -190,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e80a7245",
+   "id": "479ec99c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -198,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f1d42fb",
+   "id": "d5f4d55a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -206,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ed0869c",
+   "id": "b6188b4e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -214,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8802a8ee",
+   "id": "1dbeebc3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -222,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b11c023",
+   "id": "2dc32e2b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -230,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7605e93d",
+   "id": "6168d71a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -238,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2bd500f",
+   "id": "5647524f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -246,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0a3153f",
+   "id": "f62e4d92",
    "metadata": {},
    "outputs": [],
    "source": []
