--- a/Book/01.Introduction to Machine Learning with Python/Chapter 01.ipynb
+++ b/Book/01.Introduction to Machine Learning with Python/Chapter 01.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0b4aa1b",
+   "id": "afe1a494",
    "metadata": {},
    "source": [
     "# matplotlib"
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab9a4cd6",
+   "id": "3aa027f5",
    "metadata": {},
    "source": [
     "matplotlib is the primary scientific plotting library in Python. It provides functions\n",
@@ -258,36 +258,217 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5f4d55a",
+   "cell_type": "markdown",
+   "id": "d62cf144",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# pandas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "813205b4",
+   "metadata": {},
+   "source": [
+    "pandas is a Python library for data wrangling and analysis. It is built around a data\n",
+    "structure called the DataFrame that is modeled after the R DataFrame. Simply put, a\n",
+    "pandas DataFrame is a table, similar to an Excel spreadsheet. pandas provides a great\n",
+    "range of methods to modify and operate on this table; in particular, it allows SQL-like\n",
+    "queries and joins of tables. In contrast to NumPy, which requires that all entries in an\n",
+    "array be of the same type, pandas allows each column to have a separate type (for\n",
+    "example, integers, dates, floating-point numbers, and strings). Another valuable tool\n",
+    "provided by pandas is its ability to ingest from a great variety of file formats and databases, like SQL, Excel files, and comma-separated values (CSV) files."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b6188b4e",
+   "execution_count": 10,
+   "id": "7562c097",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pandas\n",
+      "  Downloading pandas-1.5.3-cp311-cp311-win_amd64.whl (10.3 MB)\n",
+      "     -------------------------------------- 10.3/10.3 MB 190.9 kB/s eta 0:00:00\n",
+      "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\sabbo\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pandas) (2.8.2)\n",
+      "Collecting pytz>=2020.1\n",
+      "  Downloading pytz-2022.7.1-py2.py3-none-any.whl (499 kB)\n",
+      "     ------------------------------------ 499.4/499.4 kB 134.3 kB/s eta 0:00:00\n",
+      "Requirement already satisfied: numpy>=1.21.0 in c:\\users\\sabbo\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pandas) (1.24.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\sabbo\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n",
+      "Installing collected packages: pytz, pandas\n",
+      "Successfully installed pandas-1.5.3 pytz-2022.7.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip available: 22.3.1 -> 23.0\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pandas"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1dbeebc3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>John</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Anna</td>\n",
+       "      <td>Paris</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Peter</td>\n",
+       "      <td>Berlin</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Linda</td>\n",
+       "      <td>London</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Name  Location  Age\n",
+       "0   John  New York   24\n",
+       "1   Anna     Paris   13\n",
+       "2  Peter    Berlin   53\n",
+       "3  Linda    London   33"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# create a simple dataset of people\n",
+    "data = {'Name': [\"John\", \"Anna\", \"Peter\", \"Linda\"], \n",
+    "        'Location' : [\"New York\", \"Paris\", \"Berlin\", \"London\"], \n",
+    "        'Age' : [24, 13, 53, 33]\n",
+    "       }\n",
+    "\n",
+    "data_pandas = pd.DataFrame(data)\n",
+    "# IPython.display allows \"pretty printing\" of dataframes in the Jupyter notebook\n",
+    "\n",
+    "display(data_pandas)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2dc32e2b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Peter</td>\n",
+       "      <td>Berlin</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Linda</td>\n",
+       "      <td>London</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Name Location  Age\n",
+       "2  Peter   Berlin   53\n",
+       "3  Linda   London   33"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Select all rows that have an age column greater than 30\n",
+    "display(data_pandas[data_pandas.Age > 30])"
+   ]
   },
   {
    "cell_type": "code",
