--- a/Book/01.Introduction to Machine Learning with Python/Chapter 01.ipynb
+++ b/Book/01.Introduction to Machine Learning with Python/Chapter 01.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afe1a494",
+   "id": "7b9bb850",
    "metadata": {},
    "source": [
     "# matplotlib"
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3aa027f5",
+   "id": "1d3e94a1",
    "metadata": {},
    "source": [
     "matplotlib is the primary scientific plotting library in Python. It provides functions\n",
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d62cf144",
+   "id": "7182e23a",
    "metadata": {},
    "source": [
     "# pandas"
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "813205b4",
+   "id": "9652bd14",
    "metadata": {},
    "source": [
     "pandas is a Python library for data wrangling and analysis. It is built around a data\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7562c097",
+   "id": "1a286946",
    "metadata": {},
    "outputs": [
     {
@@ -472,11 +472,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6168d71a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python version: 3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]\n",
+      "pandas version: 1.5.3\n",
+      "matplotlib version: 3.6.3\n",
+      "NumPy version: 1.24.1\n",
+      "SciPy version: 1.10.0\n",
+      "IPython version: 8.7.0\n",
+      "scikit-learn version: 1.2.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(\"Python version: {}\".format(sys.version))\n",
+    "\n",
+    "import pandas as pd\n",
+    "print(\"pandas version: {}\".format(pd.__version__))\n",
+    "\n",
+    "import matplotlib\n",
+    "print(\"matplotlib version: {}\".format(matplotlib.__version__))\n",
+    "\n",
+    "import numpy as np\n",
+    "print(\"NumPy version: {}\".format(np.__version__))\n",
+    "\n",
+    "import scipy as sp\n",
+    "print(\"SciPy version: {}\".format(sp.__version__))\n",
+    "\n",
+    "import IPython\n",
+    "print(\"IPython version: {}\".format(IPython.__version__))\n",
+    "\n",
+    "import sklearn\n",
+    "print(\"scikit-learn version: {}\".format(sklearn.__version__))\n"
+   ]
   },
   {
    "cell_type": "code",
