--- a/Book/01.Introduction to Machine Learning with Python/Classifying Iris Species.ipynb
+++ b/Book/01.Introduction to Machine Learning with Python/Classifying Iris Species.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ea4a5920",
+   "id": "a57a41fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f69720ff",
+   "id": "4732e4e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6100943c",
+   "id": "4f38169d",
    "metadata": {},
    "source": [
     "The iris object that is returned by load_iris is a Bunch object, which is very similar\n",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b1c69c04",
+   "id": "eccb9d1a",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc79c8b6",
+   "id": "7b659167",
    "metadata": {},
    "source": [
     "The value of the key DESCR is a short description of the dataset. "
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "f1461089",
+   "id": "306a736f",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b86052d",
+   "id": "32e4559e",
    "metadata": {},
    "source": [
     "The value of the key target_names is an array of strings, containing the species of\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "a5963ba5",
+   "id": "54cf6e99",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6add972",
+   "id": "d2ae0008",
    "metadata": {},
    "source": [
     "The value of feature_names is a list of strings, giving the description of each feature:"
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "bd54632a",
+   "id": "17e7849f",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "884698a4",
+   "id": "feca02eb",
    "metadata": {},
    "source": [
     "The data itself is contained in the target and data fields. data contains the numeric\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "34d6e50c",
+   "id": "fd8fb662",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03c17edf",
+   "id": "68df0578",
    "metadata": {},
    "source": [
     "The rows in the data array correspond to flowers, while the columns represent the\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d8255a9c",
+   "id": "d436a0c3",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c8e9748",
+   "id": "49be8392",
    "metadata": {},
    "source": [
     "We see that the array contains measurements for 150 different flowers. Remember\n",
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "96d9db49",
+   "id": "4f3dddc7",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9608687e",
+   "id": "8bec51f6",
    "metadata": {},
    "source": [
     "From this data, we can see that all of the first five flowers have a petal width of 0.2 cm\n",
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c4cdd8ae",
+   "id": "960a11d3",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "711b2096",
+   "id": "03b83acd",
    "metadata": {},
    "source": [
     "target is a one-dimensional array, with one entry per flower:"
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "6f8853c9",
+   "id": "6ab9673f",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00d0c465",
+   "id": "bbc5a5f4",
    "metadata": {},
    "source": [
     "The species are encoded as integers from 0 to 2:"
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9ceba4de",
+   "id": "19332117",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cd6c3b6",
+   "id": "e28b53e6",
    "metadata": {},
    "source": [
     "The meanings of the numbers are given by the iris['target_names'] array:\n",
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ff5e1b1",
+   "id": "f155f736",
    "metadata": {},
    "source": [
     "### Training and Testing Data"
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "cfe8db26",
+   "id": "37b3b40c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "38075635",
+   "id": "6531a856",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "469e86fd",
+   "id": "32246675",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7f99559b",
+   "id": "ad645dfd",
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baafd658",
+   "id": "dea41143",
    "metadata": {},
    "source": [
     "### Look at Your Data"
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8283e3ef",
+   "id": "27330217",
    "metadata": {},
    "source": [
     "Additionally, inspecting your data is a good way to find abnormalities and peculiari‐\n",
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "806cf48b",
+   "id": "8dfbf5b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "343143f2",
+   "id": "4a75917e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "149a6330",
+   "id": "26e7222d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "e7f0a60c",
+   "id": "5cb02204",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "2f63595d",
+   "id": "c4ffbc90",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15861a76",
+   "id": "48c973ff",
    "metadata": {},
    "source": [
     "From the plots, we can see that the three classes seem to be relatively well separated\n",
@@ -512,9 +512,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a70802d1",
+   "metadata": {},
+   "source": [
+    "### Building Your First Model: k-Nearest Neighbors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "9ebcf917",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "knn = KNeighborsClassifier(n_neighbors=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "284dcc9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KNeighborsClassifier(n_neighbors=1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">KNeighborsClassifier</label><div class=\"sk-toggleable__content\"><pre>KNeighborsClassifier(n_neighbors=1)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "KNeighborsClassifier(n_neighbors=1)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knn.fit(X_train, y_train)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94de15d1",
+   "id": "6eb8c347",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96604e56",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e8391af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9931781c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24245082",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d49b5eed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15746ee6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee730370",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71e1d480",
    "metadata": {},
    "outputs": [],
    "source": []
