--- a/Book/01.Introduction to Machine Learning with Python/Classifying Iris Species.ipynb
+++ b/Book/01.Introduction to Machine Learning with Python/Classifying Iris Species.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a57a41fb",
+   "id": "fec6ebee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4732e4e6",
+   "id": "40176278",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f38169d",
+   "id": "bff7f451",
    "metadata": {},
    "source": [
     "The iris object that is returned by load_iris is a Bunch object, which is very similar\n",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "eccb9d1a",
+   "id": "68afacf4",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b659167",
+   "id": "5a765601",
    "metadata": {},
    "source": [
     "The value of the key DESCR is a short description of the dataset. "
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "306a736f",
+   "id": "76097146",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32e4559e",
+   "id": "1c22ec98",
    "metadata": {},
    "source": [
     "The value of the key target_names is an array of strings, containing the species of\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "54cf6e99",
+   "id": "84a0c1ab",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2ae0008",
+   "id": "999ba7b3",
    "metadata": {},
    "source": [
     "The value of feature_names is a list of strings, giving the description of each feature:"
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "17e7849f",
+   "id": "3eb9a41a",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feca02eb",
+   "id": "82b2dbc0",
    "metadata": {},
    "source": [
     "The data itself is contained in the target and data fields. data contains the numeric\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fd8fb662",
+   "id": "1991d45e",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68df0578",
+   "id": "07546fe6",
    "metadata": {},
    "source": [
     "The rows in the data array correspond to flowers, while the columns represent the\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d436a0c3",
+   "id": "5f124368",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49be8392",
+   "id": "b9828449",
    "metadata": {},
    "source": [
     "We see that the array contains measurements for 150 different flowers. Remember\n",
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4f3dddc7",
+   "id": "725e7f2a",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bec51f6",
+   "id": "200d4086",
    "metadata": {},
    "source": [
     "From this data, we can see that all of the first five flowers have a petal width of 0.2 cm\n",
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "960a11d3",
+   "id": "3cedcc51",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03b83acd",
+   "id": "b9ca04e7",
    "metadata": {},
    "source": [
     "target is a one-dimensional array, with one entry per flower:"
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "6ab9673f",
+   "id": "59cdbff4",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbc5a5f4",
+   "id": "9f3aaabd",
    "metadata": {},
    "source": [
     "The species are encoded as integers from 0 to 2:"
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "19332117",
+   "id": "2d8616df",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e28b53e6",
+   "id": "94d11e94",
    "metadata": {},
    "source": [
     "The meanings of the numbers are given by the iris['target_names'] array:\n",
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f155f736",
+   "id": "4a5de79f",
    "metadata": {},
    "source": [
     "### Training and Testing Data"
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "37b3b40c",
+   "id": "fc84be6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "6531a856",
+   "id": "8000855c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "32246675",
+   "id": "fe1d7e78",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "ad645dfd",
+   "id": "fa65cfd4",
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dea41143",
+   "id": "ee11ee53",
    "metadata": {},
    "source": [
     "### Look at Your Data"
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27330217",
+   "id": "d1ea5a5b",
    "metadata": {},
    "source": [
     "Additionally, inspecting your data is a good way to find abnormalities and peculiari‐\n",
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "8dfbf5b7",
+   "id": "083df07e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "4a75917e",
+   "id": "0ad86ec9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "26e7222d",
+   "id": "9a1ac602",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "5cb02204",
+   "id": "527035cf",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "c4ffbc90",
+   "id": "1b965ddd",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48c973ff",
+   "id": "c19690b8",
    "metadata": {},
    "source": [
     "From the plots, we can see that the three classes seem to be relatively well separated\n",
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a70802d1",
+   "id": "5b9b8ea6",
    "metadata": {},
    "source": [
     "### Building Your First Model: k-Nearest Neighbors"
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "9ebcf917",
+   "id": "e2533f1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "284dcc9e",
+   "id": "f459cae9",
    "metadata": {},
    "outputs": [
     {
@@ -555,9 +555,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "038a422b",
+   "metadata": {},
+   "source": [
+    "### Making Predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "9f64e05d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_new.shape: (1, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_new = np.array([[5, 2.9, 1, 0.2]])\n",
+    "print(\"X_new.shape: {}\".format(X_new.shape))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b79aade",
+   "metadata": {},
+   "source": [
+    "Note that we made the measurements of this single flower into a row in a two\u0002dimensional NumPy array, as scikit-learn always expects two-dimensional arrays\n",
+    "for the data.\n",
+    "To make a prediction, we call the predict method of the knn object:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "89c7ccd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction: [0]\n",
+      "Predicted target name: ['setosa']\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction = knn.predict(X_new)\n",
+    "print(\"Prediction: {}\".format(prediction))\n",
+    "print(\"Predicted target name: {}\".format(iris_dataset['target_names'][prediction]))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6eb8c347",
+   "id": "7eb2ebc2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -565,7 +623,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96604e56",
+   "id": "bd7549a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Evaluating the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c933ff1f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -573,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e8391af",
+   "id": "8dba2721",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -581,47 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9931781c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24245082",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d49b5eed",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "15746ee6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee730370",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71e1d480",
+   "id": "f6fc2874",
    "metadata": {},
    "outputs": [],
    "source": []
