--- a/Book/01.Introduction to Machine Learning with Python/Classifying Iris Species.ipynb
+++ b/Book/01.Introduction to Machine Learning with Python/Classifying Iris Species.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fec6ebee",
+   "id": "f91b3669",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "40176278",
+   "id": "4c947209",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bff7f451",
+   "id": "63f3dc16",
    "metadata": {},
    "source": [
     "The iris object that is returned by load_iris is a Bunch object, which is very similar\n",
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "68afacf4",
+   "id": "91ea4b01",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a765601",
+   "id": "1cf0de93",
    "metadata": {},
    "source": [
     "The value of the key DESCR is a short description of the dataset. "
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "76097146",
+   "id": "467e101a",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c22ec98",
+   "id": "f1cb21be",
    "metadata": {},
    "source": [
     "The value of the key target_names is an array of strings, containing the species of\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "84a0c1ab",
+   "id": "f9043a26",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "999ba7b3",
+   "id": "2ce60ddc",
    "metadata": {},
    "source": [
     "The value of feature_names is a list of strings, giving the description of each feature:"
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "3eb9a41a",
+   "id": "c726f443",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82b2dbc0",
+   "id": "96985742",
    "metadata": {},
    "source": [
     "The data itself is contained in the target and data fields. data contains the numeric\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1991d45e",
+   "id": "cf1f0469",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07546fe6",
+   "id": "2b98180d",
    "metadata": {},
    "source": [
     "The rows in the data array correspond to flowers, while the columns represent the\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5f124368",
+   "id": "61999db4",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9828449",
+   "id": "5a115806",
    "metadata": {},
    "source": [
     "We see that the array contains measurements for 150 different flowers. Remember\n",
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "725e7f2a",
+   "id": "54b5bd06",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "200d4086",
+   "id": "853c95b6",
    "metadata": {},
    "source": [
     "From this data, we can see that all of the first five flowers have a petal width of 0.2 cm\n",
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "3cedcc51",
+   "id": "16044bae",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9ca04e7",
+   "id": "86b7f293",
    "metadata": {},
    "source": [
     "target is a one-dimensional array, with one entry per flower:"
@@ -267,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "59cdbff4",
+   "id": "b85d0391",
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f3aaabd",
+   "id": "b7b9dc55",
    "metadata": {},
    "source": [
     "The species are encoded as integers from 0 to 2:"
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "2d8616df",
+   "id": "207cc310",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94d11e94",
+   "id": "412534fb",
    "metadata": {},
    "source": [
     "The meanings of the numbers are given by the iris['target_names'] array:\n",
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a5de79f",
+   "id": "43646de0",
    "metadata": {},
    "source": [
     "### Training and Testing Data"
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "fc84be6a",
+   "id": "07e475d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "8000855c",
+   "id": "0aeb4d3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "fe1d7e78",
+   "id": "cc236d71",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "fa65cfd4",
+   "id": "abbd41a5",
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee11ee53",
+   "id": "4d183848",
    "metadata": {},
    "source": [
     "### Look at Your Data"
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1ea5a5b",
+   "id": "25d1eb34",
    "metadata": {},
    "source": [
     "Additionally, inspecting your data is a good way to find abnormalities and peculiari‐\n",
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "083df07e",
+   "id": "9ca9647e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "0ad86ec9",
+   "id": "4cd374f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "9a1ac602",
+   "id": "295aadf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "527035cf",
+   "id": "e837a1cc",
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "1b965ddd",
+   "id": "bf527cd3",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c19690b8",
+   "id": "a6d611ec",
    "metadata": {},
    "source": [
     "From the plots, we can see that the three classes seem to be relatively well separated\n",
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b9b8ea6",
+   "id": "b98aea81",
    "metadata": {},
    "source": [
     "### Building Your First Model: k-Nearest Neighbors"
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "e2533f1a",
+   "id": "9e65ab83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "f459cae9",
+   "id": "ce927b84",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "038a422b",
+   "id": "7a868b92",
    "metadata": {},
    "source": [
     "### Making Predictions"
@@ -565,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "9f64e05d",
+   "id": "d501bcb0",
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b79aade",
+   "id": "106274e5",
    "metadata": {},
    "source": [
     "Note that we made the measurements of this single flower into a row in a two\u0002dimensional NumPy array, as scikit-learn always expects two-dimensional arrays\n",
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "89c7ccd5",
+   "id": "f63f301a",
    "metadata": {},
    "outputs": [
     {
@@ -613,19 +613,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7eb2ebc2",
+   "cell_type": "markdown",
+   "id": "af9eb0cc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Our model predicts that this new iris belongs to the class 0, meaning its species is\n",
+    "setosa. But how do we know whether we can trust our model? We don’t know the cor‐\n",
+    "rect species of this sample, which is the whole point of building the model!"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd7549a2",
+   "cell_type": "markdown",
+   "id": "2309b171",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Evaluating the Model"
    ]
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c933ff1f",
+   "id": "65bc6fdd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dba2721",
+   "id": "9f337b2b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6fc2874",
+   "id": "ef09bb13",
    "metadata": {},
    "outputs": [],
    "source": []
